Revision history for Redis::CappedCollection module

    CHANGES:
    - Ability to force re-connection with Redis on error ('reconnect_on_error' attribute).
    - Revised error codes.
    - Better handling of errors when running out of memory.
    - Arguments control improved.
    FIXES:
    - Argument 'redis' may have Redis::CappedCollection type in function
      collection_info, collection_exists, drop_collection, redis_config_ok,
      resize calls.

1.05  Tue Jan  14 2016
    FIXES:
    - Error on update/upsert without $data_time in some cases (e.g. after pop_oldest).

1.04  Tue Jan  12 2016
    CHANGES:
    - Added 'upsert' method.

1.03  Thu Jan  07 2016
    CHANGES:
    - Works with a Redis server 'maxmemory-policy' setting 'noeviction' only.
    - Added 'redis_config_ok' method.
    - $E_REDIS_DID_NOT_RETURN_DATA, $E_UNKNOWN_ERROR errors added.
    - Updated version of the data structure.
    FIXES:
    - Incorrect analysis an error related to not enough memory.

1.02  Thu Sep  03 2015
    CHANGES:
    - Redis::CappedCollection does not close connection to redis server (including '->quit' method)
      if it was provided by user.
    - More convenient error codes naming.
    FIXES:
    - Fixes of test plans.

1.01  Tue Jul  07 2015
    CHANGES:
    - Updated behaviour of 'older_allowed' attribute that controls adding an element that's
      older than the last element removed from collection.
    - Added 'clear_collection' method.
    FIXES:
    - Small correction in destruction procedure.
    - Fixes of documentation and MANIFEST.

1.00  Mon Jun  15 2015

    !!! This is a major upgrade that changes API. It's strongly advised to study
    revised documentation and update your code where necessary !!!

    !!! Data structures created on the server by previous versions of the module
    are incompatible with this release. Existing collections must be recreated
    after updating to this release. !!!

    CHANGES: