@@ -34,6 +34,8 @@ use Data::UUID;
 use Redis::CappedCollection qw(
     $DEFAULT_SERVER
     $DEFAULT_PORT
+    $DEFAULT_CONNECTION_TIMEOUT
+    $DEFAULT_OPERATION_TIMEOUT
     $E_INCOMP_DATA_VERSION
     $E_NO_ERROR
     $NAMESPACE
@@ -110,6 +112,10 @@ $open_coll1 = Redis::CappedCollection->open( redis => { server => $coll_1->_serv
 ok $open_coll1->name eq $coll_1->name, "correct UUID";
 $open_coll1 = Redis::CappedCollection->open( redis => { server => $coll_1->_server }, name => $coll_1->name, reconnect_on_error => 1 );
 ok $open_coll1->name eq $coll_1->name, "correct UUID";
+$open_coll1 = Redis::CappedCollection->open( redis => { server => $coll_1->_server }, name => $coll_1->name, connection_timeout => $DEFAULT_CONNECTION_TIMEOUT );
+ok $open_coll1->name eq $coll_1->name, "correct UUID";
+$open_coll1 = Redis::CappedCollection->open( redis => { server => $coll_1->_server }, name => $coll_1->name, operation_timeout => $DEFAULT_OPERATION_TIMEOUT );
+ok $open_coll1->name eq $coll_1->name, "correct UUID";
 dies_ok { Redis::CappedCollection->open() } "expecting to die";
 
 $coll_1->_call_redis( 'HDEL', $NAMESPACE.':S:'.$coll_1->name, 'data_version' );
@@ -123,6 +129,10 @@ note '$@: ', $error;
 $coll = Redis::CappedCollection->create( redis => $redis, name => $uuid->create_str );
 isa_ok( $coll, 'Redis::CappedCollection' );
 $coll = Redis::CappedCollection->create( redis => $redis, name => $uuid->create_str, reconnect_on_error => 1 );
+isa_ok( $coll, 'Redis::CappedCollection' );
+$coll = Redis::CappedCollection->create( redis => $redis, name => $uuid->create_str, connection_timeout => $DEFAULT_CONNECTION_TIMEOUT );
+isa_ok( $coll, 'Redis::CappedCollection' );
+$coll = Redis::CappedCollection->create( redis => $redis, name => $uuid->create_str, operation_timeout => $DEFAULT_OPERATION_TIMEOUT );
 isa_ok( $coll, 'Redis::CappedCollection' );
 is $coll->_server, $redis_addr, $msg;
 ok ref( $coll->_redis ) =~ /Redis/, $msg;
