@@ -16,6 +16,8 @@ BEGIN {
 
 BEGIN { use_ok 'Redis::CappedCollection', qw(
     $DATA_VERSION
+    $DEFAULT_CONNECTION_TIMEOUT
+    $DEFAULT_OPERATION_TIMEOUT
     $DEFAULT_SERVER
     $DEFAULT_PORT
     $NAMESPACE
